--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Portfoliosite_myt/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>miyata-portfolio</title>
+    <meta name="description" content="宮田 龍 - サイエンスコミュニケーター | 科学と社会をつなぎ、閉塞感のない未来を描く" />
+    <title>宮田 龍 | サイエンスコミュニケーター</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Noto+Sans+JP:wght@300;400;500;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
