--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Portfoliosite_myt/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="宮田 龍 - サイエンスコミュニケーター | 科学と社会をつなぎ、閉塞感のない未来を描く" />
+    <meta name="description" content="宮田 龍 - サイエンスコミュニケーター | 科学と社会をつなぎ、閉塞感のない未来をつくる" />
     <title>宮田 龍 | サイエンスコミュニケーター</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
