feat: SEO improvement and fix blank page issue
- Add SEO meta tags and JSON-LD structured data
- Add ErrorBoundary to catch runtime errors
- Add sitemap.xml and robots.txt

--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Portfoliosite_myt/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="宮田 龍 - サイエンスコミュニケーター | 科学と社会をつなぎ、閉塞感のない未来をつくる" />
+    <meta name="description" content="宮田龍（Ryu Miyata）のポートフォリオサイト。サイエンスコミュニケーターとして、科学と社会をつなぐ活動（講演、執筆、ファシリテーション、展示企画など）を行っています。サイエンスコミュニケーションの実績やプロジェクトを紹介します。" />
+    <meta name="keywords" content="宮田龍,Ryu Miyata,サイエンスコミュニケーター,サイエンスコミュニケーション,科学コミュニケーター,Science Communicator,科学,社会,展示企画,ファシリテーション" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ryu-miyata.github.io/Portfoliosite_myt/" />
+    <meta property="og:title" content="宮田 龍 | サイエンスコミュニケーター" />
+    <meta property="og:description" content="宮田龍（Ryu Miyata）のポートフォリオサイト。サイエンスコミュニケーターとして、科学と社会をつなぐ活動を行っています。" />
+    <meta property="og:image" content="https://ryu-miyata.github.io/Portfoliosite_myt/images/profile.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="宮田 龍 | サイエンスコミュニケーター" />
+    <meta property="twitter:description" content="宮田龍（Ryu Miyata）のポートフォリオサイト。サイエンスコミュニケーターとして、科学と社会をつなぐ活動を行っています。" />
+    <meta property="twitter:image" content="https://ryu-miyata.github.io/Portfoliosite_myt/images/profile.png" />
+
     <title>宮田 龍 | サイエンスコミュニケーター</title>
+    
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "宮田 龍",
+      "alternateName": ["Ryu Miyata", "宮田龍"],
+      "url": "https://ryu-miyata.github.io/Portfoliosite_myt/",
+      "jobTitle": "サイエンスコミュニケーター",
+      "image": "https://ryu-miyata.github.io/Portfoliosite_myt/images/profile.png",
+      "description": "科学と社会をつなぐサイエンスコミュニケーター。展示企画、ファシリテーション、執筆などを通じて活動中。",
+      "knowsAbout": ["サイエンスコミュニケーション", "科学技術", "展示企画", "ファシリテーション", "SFプロトタイピング"]
+    }
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Noto+Sans+JP:wght@300;400;500;600&display=swap" rel="stylesheet">
